resolved styling/css centering issues and svg readability issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,26 @@
-body {
+html,
+body,
+ul,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+div,
+span,
+section,
+article,
+iframe,
+a {
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
   background: black;
   color: white;
 }
@@ -11,7 +30,7 @@ span.Cursor.Cursor--blinking {
 }
 
 svg {
-  margin: 0 auto
+  margin: 0 auto;
 }
 
 .top {
@@ -55,12 +74,10 @@ svg {
 }
 
 .masonryImage {
-  list-style: none;
-  padding: 1em;
+  /*padding: 2em;*/
 }
 
 .masonryGallery {
-  width: 100vw;
   margin: 0 auto;
 }
 
@@ -111,10 +128,10 @@ svg {
 #headerLogo svg.bottom {
   height: 5vh;
   overflow: hidden;
-  }
+}
 
 .navbar-brand {
-    padding: 0;
+  padding: 0;
 }
 
 svg.bottom {
@@ -123,7 +140,7 @@ svg.bottom {
 }
 
 body {
-  background:#0b1d2a;
+  background: #0b1d2a;
 }
 
 .arrows {
@@ -136,51 +153,63 @@ body {
 }
 
 .arrows path {
-  stroke: #2994D1;
+  stroke: #2994d1;
   fill: transparent;
-  stroke-width: 1px;  
+  stroke-width: 1px;
   animation: arrow 2s infinite;
-  -webkit-animation: arrow 2s infinite; 
+  -webkit-animation: arrow 2s infinite;
 }
 
-@keyframes arrow
-{
-0% {opacity:0}
-40% {opacity:1}
-80% {opacity:0}
-100% {opacity:0}
+@keyframes arrow {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
-@-webkit-keyframes arrow /*Safari and Chrome*/
-{
-0% {opacity:0}
-40% {opacity:1}
-80% {opacity:0}
-100% {opacity:0}
+@-webkit-keyframes arrow {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 .arrows path.a1 {
-  animation-delay:-1s;
-  -webkit-animation-delay:-1s; /* Safari 和 Chrome */
+  animation-delay: -1s;
+  -webkit-animation-delay: -1s; /* Safari 和 Chrome */
 }
 
 .arrows path.a2 {
-  animation-delay:-0.5s;
-  -webkit-animation-delay:-0.5s; /* Safari 和 Chrome */
+  animation-delay: -0.5s;
+  -webkit-animation-delay: -0.5s; /* Safari 和 Chrome */
 }
 
-.arrows path.a3 { 
-  animation-delay:0s;
-  -webkit-animation-delay:0s; /* Safari 和 Chrome */
+.arrows path.a3 {
+  animation-delay: 0s;
+  -webkit-animation-delay: 0s; /* Safari 和 Chrome */
 }
 
 @media screen {
-  
 }
 
-
-.scrollLink:hover{
-  cursor: pointer; 
+.scrollLink:hover {
+  cursor: pointer;
 }
 
 /* TRUCKHUNT SVG */
@@ -196,27 +225,27 @@ body {
   animation: stroke 6s infinite linear;
 }
 .text:nth-child(5n + 1) {
-  stroke: #F2385A;
+  stroke: #f2385a;
   -webkit-animation-delay: -1.2s;
   animation-delay: -1.2s;
 }
 .text:nth-child(5n + 2) {
-  stroke: #F5A503;
+  stroke: #f5a503;
   -webkit-animation-delay: -2.4s;
   animation-delay: -2.4s;
 }
 .text:nth-child(5n + 3) {
-  stroke: #E9F1DF;
+  stroke: #e9f1df;
   -webkit-animation-delay: -3.6s;
   animation-delay: -3.6s;
 }
 .text:nth-child(5n + 4) {
-  stroke: #56D9CD;
+  stroke: #56d9cd;
   -webkit-animation-delay: -4.8s;
   animation-delay: -4.8s;
 }
 .text:nth-child(5n + 5) {
-  stroke: #3AA1BF;
+  stroke: #3aa1bf;
   -webkit-animation-delay: -6s;
   animation-delay: -6s;
 }
@@ -234,12 +263,30 @@ body {
 
 #TruckHuntSVG {
   background: #111;
-  background-size: .2em 880px;
+  background-size: 0.2em 880px;
   /*max-width: 100%;*/
   font: 5em/1 Open Sans, Impact;
   text-transform: uppercase;
   margin: 0;
 }
 
+.welcomeStyle {
+  padding: 20;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
 
-
+@media screen and (max-width: 700px){
+  .welcomeStyle {
+    padding: 0;
+  }
+  .typistHeader{
+    font-size: 1.5em;
+  }
+  .typistContent {
+    font-size: 1em;
+  }
+} 
